--- a/README
+++ b/README
@@ -13,6 +13,13 @@ Sasi kiran:
 * Added storyboard support.
 * Added support to detect images with ~ipad and ~@2xipad.
 
+Dimo Hamdy: 
+* Added Delete All unUsed Files.
+
+![alt tag](https://raw.githubusercontent.com/dimohamdy/Unused/master/1.jpg " ")
+![alt tag](https://raw.githubusercontent.com/dimohamdy/Unused/master/2.jpg " ")
+
+
 Stable version on the Mac App Store:
 http://itunes.apple.com/gb/app/unused/id490082248?mt=12
 
