--- a/README
+++ b/README
@@ -16,8 +16,8 @@ Sasi kiran:
 Dimo Hamdy: 
 * Added Delete All unUsed Files.
 
-![alt tag](https://raw.githubusercontent.com/dimohamdy/Unused/master/1.jpg " ")
-![alt tag](https://raw.githubusercontent.com/dimohamdy/Unused/master/2.jpg " ")
+![alt tag](https://raw.githubusercontent.com/dimohamdy/Unused/master/1.jpg)
+![alt tag](https://raw.githubusercontent.com/dimohamdy/Unused/master/2.jpg)
 
 
 Stable version on the Mac App Store:
