--- a/README
+++ b/README
@@ -15,6 +15,9 @@ Sasi kiran:
 
 Dimo Hamdy: 
 * Added Delete All unUsed Files.
+![Search for all unUsed Resources](https://raw.githubusercontent.com/dimohamdy/Unused/master/1.jpg)
+![Delete all unUsed Resources](https://raw.githubusercontent.com/dimohamdy/Unused/master/2.jpg)
+
 
 Stable version on the Mac App Store:
 http://itunes.apple.com/gb/app/unused/id490082248?mt=12
