--- a/README
+++ b/README
@@ -14,7 +14,9 @@ Sasi kiran:
 * Added support to detect images with ~ipad and ~@2xipad.
 
 Dimo Hamdy: 
+Hamdy.a.Tawfik@gmail.com
 * Added Delete All unUsed Files.
+https://github.com/dimohamdy/Unused/wiki
 
 Stable version on the Mac App Store:
 http://itunes.apple.com/gb/app/unused/id490082248?mt=12
